--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,8 @@ repos:
     hooks:
       - id: isort
         types: ['python']
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v0.761'  # Use the sha / tag you want to point at
+    hooks:
+    -   id: mypy
