--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,3 +29,4 @@ repos:
     rev: 'v0.761'  # Use the sha / tag you want to point at
     hooks:
     -   id: mypy
+        args: ["--scripts-are-modules"]  # by default there is also "--ignore-missing-imports"
