ci(github): Run pre-commit in github actions (#2)
- Configure github actions to run pre-commit on the repo to check
style, etc.

- Update to stable/new versions of hooks to avoid spurious failures from
upstream updates.

- Flag a few imports in tests and examples with NOQA.  This is to avoid
bugs in isort.  In particular, isort is environment dependent.

    https://github.com/timothycrosley/isort/issues/1147
    https://github.com/timothycrosley/isort/issues/952
    https://github.com/timothycrosley/isort/issues/1007

- Disable one flake8 lint: 501, line too long

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,11 @@
 [tool:pytest]
 python_files = test_*.py *_test.py testing/*/*.py example_*.py
 python_functions = test_* example_*
+
+[flake8]
+ignore =
+    # line too long
+    E501,
+
+[tool:isort]
+known_first_party=learn_as_you_go
