feat: Add a simple neural network emulator
Add a very simple emulator based on a neural network.  This class is
called `TorchEmulator`.  It depends on a separate class for the neural
network, `nn.Net`.

This needs a bit more work: in particular, it doesn't have any error
estimation yet.

In addition, output plots when doing tests.

--- a/environment.yml
+++ b/environment.yml
@@ -5,5 +5,6 @@ channels:
 dependencies:
   - numpy
   - matplotlib
+  - pytorch
   - emcee=2.*     # Example is not compatible with emcee 3.*
   - scipy
