--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.png
+
+######################### PYTHON ##############################################
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
