--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - numpy
   - matplotlib
+  - pytorch
   - emcee=2.*     # Example is not compatible with emcee 3.*
   - scipy
 
