--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,8 @@ ignore =
     E501,
 
 [tool:isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
 known_first_party=learn_as_you_go
