docs: Basic sphinx config showing the README
Translate the readme to rst instead of markdown; simplifies including it
in the home page.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,3 +29,4 @@ repos:
     hooks:
     -   id: mypy
         args: ["--scripts-are-modules"]  # by default there is also "--ignore-missing-imports"
+        exclude: "doc"
