doc, tests: example definition of an emulator
Add another example: defining an emulator.
Add this to the docs with a brief description and a plot.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [tool:pytest]
 python_files = test_*.py *_test.py testing/*/*.py example_*.py
 python_functions = test_* example_*
+norecursedirs = doc
 
 [flake8]
 ignore =
